Increased spacing. Fixed index links.

--- a/style.css
+++ b/style.css
@@ -63,6 +63,15 @@ header.home {
   }
 }
 
+
+h2 {
+  margin: 4rem 0 1rem 0;
+}
+
+p {
+  margin: 1rem 0;
+}
+
 table {
   width: 100%;
   margin: 2rem 0;
@@ -91,7 +100,7 @@ table tr:first-child th:last-child {
 blockquote {
   border-left: 1rem solid var(--color2);
   padding: 0.5rem 1rem;
-  margin: 1rem 0;
+  margin: 2rem 0;
   background-color: var(--color1);
   border-radius: 0.5rem;
 }
@@ -99,22 +108,25 @@ blockquote {
 code {
   font-family: "Fira Code", monospace;
   background-color: var(--color1);
+  border-radius: 0.3rem;
 }
 
 pre > code {
-  display: block;
-  box-sizing: border-box;
   width: 100%;
+  display: block;
+  margin: 2rem 0;
   padding: 1rem 2rem;
+  box-sizing: border-box;
   border-radius: 0.5rem;
   overflow-x: auto;
+  color: var(--color6);
 }
 
 pre.result {
   position: relative;
   z-index: -1;
   code {
-    margin-top: -2rem;
+    margin-top: -3rem;
     background-color: var(--color2);
     padding: 2rem 2rem 1rem 2rem;
   }
